--- a/pms-frontend/index.html
+++ b/pms-frontend/index.html
@@ -8,6 +8,9 @@
   <body>
     <!-- Root element for React -->
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx">
+        window.__API_BASE_URL__ = "http://localhost:3000";
+
+    </script>
   </body>
 </html>
